# angband

angband/: .cproject  .project  CMakeLists.txt  Makefile  cave-view.c  cave.h  config.h  gen-room.c  generate.c  h-basic.h  init.c  isqrt.asm  main-ami.c  main-gcu.c  main.c  main.h  mon-spell.h  monster.h  obj-ignore.h  obj-properties.h  obj-util.c  object.h  parser.c  player-history.h  player-path.c  player.h  sound-ami.c  sound-ami.h  store.c  trap.h  ui-game.c  ui-knowledge.c  ui-output.c  ui-player.c  ui-score.c  ui-signals.c  ui-target.c  z-bitflag.c  z-file.c  z-form.c  (+2 more)
angband/lib/save/: Alex  Mage  PLAYER  PLAYER263604.new  Priest
angband/lib/scores/: scores.old  scores.raw
angband/lib/sounds/: amb_bell_metal1.8svx  amb_bell_metal2.8svx  amb_bell_tibet1.8svx  amb_bell_tibet2.8svx  amb_bell_tibet3.8svx  amb_door_doom.8svx  amb_door_iron.8svx  amb_dungeon_echo.8svx  amb_dungeon_echowet.8svx  amb_gong_chinese.8svx  amb_gong_low.8svx  amb_gong_strike.8svx  amb_gong_undertone.8svx  amb_guitar_chord.8svx  amb_pulse_low.8svx  amb_thunder_rain.8svx  amb_thunder_roll.8svx  id_bad_aww.8svx  id_bad_dang.8svx  id_bad_hmm.8svx  id_bad_hmph.8svx  id_bad_ohh.8svx  id_ego_whoa.8svx  id_ego_woohoo.8svx  id_ego_yeah.8svx  id_ego_yeah2.8svx  id_ego_yes.8svx  id_good_hey.8svx  id_good_hey2.8svx  id_good_hmm.8svx  id_good_huh.8svx  id_good_ooh.8svx  id_good_ooo.8svx  id_good_wow.8svx  mco_attack_breath.8svx  mco_attack_spray.8svx  mco_bite_chew.8svx  mco_bite_chomp.8svx  mco_bite_dainty.8svx  mco_bite_gnash.8svx  (+174 more)
angband/lib/user/: Persa.prf  alkisPLAYER.prf  dump.txt  lore.txt
